# HireLens

./: README.md  prompt.txt  vercel.json
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/agents/: ats_agent.py  career_path_agent.py  cover_letter_agent.py  interview_agent.py  job_matching_agent.py  resume_agent.py  resume_chat_agent.py  resume_enhance_agent.py  supervisor.py  types.py
backend/app/api/v1/: agent.py  auth.py  chat.py  dashboard.py  export.py  health.py  resume.py  router.py  stream.py  subscriptions.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  analysis.py  chat.py  resume.py  user.py
backend/app/schemas/: agent.py  ats.py  career_path.py  cover_letter.py  interview.py  job_matching.py  resume.py
backend/app/services/: ats_scorer.py  rate_limiter.py  resume_parser.py  streaming.py
backend/app/state/: session_store.py
backend/tests/: test_agents.py  test_api.py  test_services.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  ChatBot.css  ResumeUpload.css  api.js  index.css  main.jsx
frontend/src/api/: index.js
frontend/src/components/: AIChat.css  AIChat.jsx  AISuggestions.jsx  AgentOutputRenderer.jsx  AnalysisResults.css  AnalysisResults.jsx  Auth.jsx  ChatBot.jsx  Compare.jsx  Dashboard.jsx  History.jsx  Homepage.jsx  JobMatcher.css  JobMatcher.jsx  LoginPage.jsx  Navbar.css  Navbar.jsx  ResumeChat.jsx  ResumeUpload.jsx  ScoreDashboard.css  ScoreDashboard.jsx  Settings.jsx  UploadPage.css  UploadPage.jsx
frontend/src/components/animations/: AnimatedCounter.jsx  AnimatedProgressRing.jsx  FadeIn.jsx  MarqueeRow.jsx
frontend/src/components/layout/: MainLayout.jsx
frontend/src/components/ui/: badge.jsx  button.jsx  card.jsx  input.jsx  label.jsx
frontend/src/lib/: auth.jsx
frontend/src/styles/: resume-chat.css
