[project]
name = "hire-lens-backend"
version = "0.1.0"
description = "Backend for Hire Lens Resume Checker (Agentic AI)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-dotenv>=1.2.1",
    "langchain>=1.2.3",
    "langgraph>=1.0.5",
    "langchain-openai>=1.1.7",
    "pdfplumber>=0.11.4",
    "python-docx>=1.1.2",
    "pydantic-settings>=2.10.1",
    "loguru>=0.7.3",
    "python-multipart>=0.0.21",
    "langchain-google-genai>=4.1.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
